add padding sequence

--- a/poetry_generator.ipynb
+++ b/poetry_generator.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c792f3e3",
+   "id": "1f1c377b",
    "metadata": {
     "scrolled": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09d6f47f",
+   "id": "47845eef",
    "metadata": {},
    "source": [
     "### Loading the data"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8d7175ca",
+   "id": "789c5075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4e353d41",
+   "id": "a2966371",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5e940084",
+   "id": "806767da",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "827e66e5",
+   "id": "f1ed547d",
    "metadata": {},
    "outputs": [
     {
@@ -129,17 +129,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b866d72a",
+   "id": "85102715",
    "metadata": {},
    "source": [
-    "### Converting sentences into integers\n",
+    "### Converting sentences into integers and word to integer mapping\n",
     "#### Tokenizer 1) Splits into individual tokens/words 2) each word is converted into an integer index for mapping "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0633cc04",
+   "id": "e9172e59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c7718ea8",
+   "id": "8bbfaa02",
    "metadata": {},
    "outputs": [
     {
@@ -191,39 +191,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "fa911183",
+   "execution_count": 9,
+   "id": "2dc64494",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[413, 571, 572, 7, 3, 573, 808], [16, 574, 5, 66, 28, 984, 153], [16, 24, 25, 985, 163, 5, 258], [16, 181, 69, 25, 14, 137, 14, 5, 66], [59, 39, 8, 986, 7, 1, 2408], [259, 197, 1, 575, 14, 73, 14, 2409], [16, 145, 305, 1, 260, 2410], [2411, 8, 12, 576, 4, 244, 2412], [414, 14, 13, 11, 1, 577, 58], [578, 579, 50, 415, 122, 1, 809], [16, 153, 11, 987, 988, 580], [102, 989, 44, 581, 21, 990, 991], [2413, 5, 261, 1, 262, 13, 323, 2414], [810, 992, 106, 80, 993, 15, 2, 80], [30, 994, 29, 5, 126, 154, 86, 324]]\n"
+      "[[413, 571, 572, 7, 3, 573, 808], [16, 574, 5, 66, 28, 984, 153], [16, 24, 25, 985, 163, 5, 258], [16, 181, 69, 25, 14, 137, 14, 5, 66], [59, 39, 8, 986, 7, 1, 2408], [259, 197, 1, 575, 14, 73, 14, 2409], [16, 145, 305, 1, 260, 2410], [2411, 8, 12, 576, 4, 244, 2412], [414, 14, 13, 11, 1, 577, 58], [578, 579, 50, 415, 122, 1, 809], [16, 153, 11, 987, 988, 580], [102, 989, 44, 581, 21, 990, 991], [2413, 5, 261, 1, 262, 13, 323, 2414], [810, 992, 106, 80, 993, 15, 2, 80], [30, 994, 29, 5, 126, 154, 86, 324]]\n",
+      "Maximum sequence length 11\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(input_sequences[:15])\n",
     "\n",
     "max_seq_len_from_data = max(len(s) for s in input_sequences)\n",
-    "max_seq_len_from_data\n"
+    "print('Maximum sequence length', max_seq_len_from_data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9014c40f",
+   "metadata": {},
+   "source": [
+    "#### word to integer mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1f70ac03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unique tokens = 4614\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_to_index = tokenizer.word_index\n",
+    "print('unique tokens =',len(word_to_index))\n",
+    "# assert('<sos>' in word_to_index)\n",
+    "# assert('<eos>' in word_to_index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b0a06d3",
+   "metadata": {},
+   "source": [
+    "### Padding sequences --> by adding padding tokens, all sequences of varying lengths have same length so that they can be effectively processed by the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "92465b3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_seq_len = min(max_seq_len_from_data, MAX_SEQUENCE_LENGTH)\n",
+    "input_sequences = pad_sequences(input_sequences, maxlen=max_seq_len, padding='post')\n",
+    "target_sequences = pad_sequences(target_sequences, maxlen=max_seq_len, padding='post')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "524a3140",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input sequence is [413 571 572   7   3 573 808   0   0   0   0] with the size of 11\n",
+      "Target sequence is [133 571 572   7   3 573   0   0   0   0   0] with the size of 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Input sequence is {} with the size of {}' .format(input_sequences[0], input_sequences.shape[1]))\n",
+    "print('Target sequence is {} with the size of {}' .format(target_sequences[0], target_sequences.shape[1]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3d09c28",
+   "id": "d72841f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -231,7 +291,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0047e8d",
+   "id": "f8402df1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99f641e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e19733a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f0b653d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2d3d768",
    "metadata": {},
    "outputs": [],
    "source": []
