add embedding matrix

--- a/poetry_generator.ipynb
+++ b/poetry_generator.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "bb3f0c33",
+   "execution_count": 15,
+   "id": "602cd766",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-07-22 21:29:33.992967: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffce9a8a",
+   "id": "99488a78",
    "metadata": {},
    "source": [
     "### Loading the data"
@@ -43,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7a02969a",
+   "id": "902af67c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "24ad1f79",
+   "id": "d198f629",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "77265eb2",
+   "id": "48d42d25",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e8b516bb",
+   "id": "31a80a0b",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cfc018c",
+   "id": "a41a8c2c",
    "metadata": {},
    "source": [
     "### Converting sentences into integers and word to integer mapping\n",
@@ -139,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7a3469dc",
+   "id": "5164e53b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "64b9600a",
+   "id": "60c143bc",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "63e6cf4a",
+   "id": "2d0d2bbf",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a44c85a1",
+   "id": "8e70bf1b",
    "metadata": {},
    "source": [
     "#### word to integer mapping"
@@ -222,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "79a35ca2",
+   "id": "a3c33754",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edd352a2",
+   "id": "da7bdf3b",
    "metadata": {},
    "source": [
     "### Padding sequences --> by adding padding tokens, all sequences of varying lengths have same length so that they can be effectively processed by the model"
@@ -251,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b163dd6f",
+   "id": "6df721e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f1fac0f7",
+   "id": "845e443c",
    "metadata": {
     "scrolled": true
    },
@@ -284,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "556b0442",
+   "id": "acd0ff31",
    "metadata": {},
    "source": [
     "### Load pre-trained word vectors with GloVe and word --> vec mapping"
@@ -292,8 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "d5009b13",
+   "execution_count": 12,
+   "id": "c6c25566",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,8 +293,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "90ffaeb2",
+   "execution_count": 13,
+   "id": "7b2d4952",
    "metadata": {
     "scrolled": true
    },
@@ -330,61 +321,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "cec4ac04",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'the': array([ 4.1800e-01,  2.4968e-01, -4.1242e-01,  1.2170e-01,  3.4527e-01,\n",
-       "        -4.4457e-02, -4.9688e-01, -1.7862e-01, -6.6023e-04, -6.5660e-01,\n",
-       "         2.7843e-01, -1.4767e-01, -5.5677e-01,  1.4658e-01, -9.5095e-03,\n",
-       "         1.1658e-02,  1.0204e-01, -1.2792e-01, -8.4430e-01, -1.2181e-01,\n",
-       "        -1.6801e-02, -3.3279e-01, -1.5520e-01, -2.3131e-01, -1.9181e-01,\n",
-       "        -1.8823e+00, -7.6746e-01,  9.9051e-02, -4.2125e-01, -1.9526e-01,\n",
-       "         4.0071e+00, -1.8594e-01, -5.2287e-01, -3.1681e-01,  5.9213e-04,\n",
-       "         7.4449e-03,  1.7778e-01, -1.5897e-01,  1.2041e-02, -5.4223e-02,\n",
-       "        -2.9871e-01, -1.5749e-01, -3.4758e-01, -4.5637e-02, -4.4251e-01,\n",
-       "         1.8785e-01,  2.7849e-03, -1.8411e-01, -1.1514e-01, -7.8581e-01],\n",
-       "       dtype=float32),\n",
-       " ',': array([ 0.013441,  0.23682 , -0.16899 ,  0.40951 ,  0.63812 ,  0.47709 ,\n",
-       "        -0.42852 , -0.55641 , -0.364   , -0.23938 ,  0.13001 , -0.063734,\n",
-       "        -0.39575 , -0.48162 ,  0.23291 ,  0.090201, -0.13324 ,  0.078639,\n",
-       "        -0.41634 , -0.15428 ,  0.10068 ,  0.48891 ,  0.31226 , -0.1252  ,\n",
-       "        -0.037512, -1.5179  ,  0.12612 , -0.02442 , -0.042961, -0.28351 ,\n",
-       "         3.5416  , -0.11956 , -0.014533, -0.1499  ,  0.21864 , -0.33412 ,\n",
-       "        -0.13872 ,  0.31806 ,  0.70358 ,  0.44858 , -0.080262,  0.63003 ,\n",
-       "         0.32111 , -0.46765 ,  0.22786 ,  0.36034 , -0.37818 , -0.56657 ,\n",
-       "         0.044691,  0.30392 ], dtype=float32),\n",
-       " '.': array([ 1.5164e-01,  3.0177e-01, -1.6763e-01,  1.7684e-01,  3.1719e-01,\n",
-       "         3.3973e-01, -4.3478e-01, -3.1086e-01, -4.4999e-01, -2.9486e-01,\n",
-       "         1.6608e-01,  1.1963e-01, -4.1328e-01, -4.2353e-01,  5.9868e-01,\n",
-       "         2.8825e-01, -1.1547e-01, -4.1848e-02, -6.7989e-01, -2.5063e-01,\n",
-       "         1.8472e-01,  8.6876e-02,  4.6582e-01,  1.5035e-02,  4.3474e-02,\n",
-       "        -1.4671e+00, -3.0384e-01, -2.3441e-02,  3.0589e-01, -2.1785e-01,\n",
-       "         3.7460e+00,  4.2284e-03, -1.8436e-01, -4.6209e-01,  9.8329e-02,\n",
-       "        -1.1907e-01,  2.3919e-01,  1.1610e-01,  4.1705e-01,  5.6763e-02,\n",
-       "        -6.3681e-05,  6.8987e-02,  8.7939e-02, -1.0285e-01, -1.3931e-01,\n",
-       "         2.2314e-01, -8.0803e-02, -3.5652e-01,  1.6413e-02,  1.0216e-01],\n",
-       "       dtype=float32)}"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from itertools import islice\n",
-    "\n",
-    "dict(islice(word2vec.items(), 3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "5c096ed0",
+   "execution_count": 14,
+   "id": "d593de95",
    "metadata": {},
    "outputs": [
     {
@@ -432,25 +370,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2a0b3e8",
+   "cell_type": "markdown",
+   "id": "87d78468",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Embedding matrix"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf16ce7e",
+   "id": "763a53b8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Filling pretrained embedding')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "685bed6b",
+   "id": "96573fac",
    "metadata": {},
    "outputs": [],
    "source": []
