--- a/poetry_generator.ipynb
+++ b/poetry_generator.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "602cd766",
+   "id": "d42fcc0d",
    "metadata": {
     "scrolled": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99488a78",
+   "id": "ede36fc8",
    "metadata": {},
    "source": [
     "### Loading the data"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "902af67c",
+   "id": "880e065d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d198f629",
+   "id": "9e135285",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "48d42d25",
+   "id": "67e6a69f",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "31a80a0b",
+   "id": "329efd4d",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a41a8c2c",
+   "id": "1686ab67",
    "metadata": {},
    "source": [
     "### Converting sentences into integers and word to integer mapping\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5164e53b",
+   "id": "7781a589",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "60c143bc",
+   "id": "4428efbc",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2d0d2bbf",
+   "id": "d1195cf4",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e70bf1b",
+   "id": "1dadeaff",
    "metadata": {},
    "source": [
     "#### word to integer mapping"
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a3c33754",
+   "id": "ab4972bf",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da7bdf3b",
+   "id": "b1f8f5de",
    "metadata": {},
    "source": [
     "### Padding sequences --> by adding padding tokens, all sequences of varying lengths have same length so that they can be effectively processed by the model"
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6df721e1",
+   "id": "0ef0b4e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "845e443c",
+   "id": "ae31306c",
    "metadata": {
     "scrolled": true
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acd0ff31",
+   "id": "c85459b7",
    "metadata": {},
    "source": [
     "### Load pre-trained word vectors with GloVe and word --> vec mapping"
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c6c25566",
+   "id": "2f7f5f84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7b2d4952",
+   "id": "1a912de6",
    "metadata": {
     "scrolled": true
    },
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d593de95",
+   "id": "09d4870c",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87d78468",
+   "id": "9ae3e521",
    "metadata": {},
    "source": [
     "### Embedding matrix"
@@ -379,18 +379,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "763a53b8",
+   "execution_count": 17,
+   "id": "a1aa13df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filling pretrained embeddings...\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Filling pretrained embeddings...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "7503edc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Filling pretrained embedding')"
+    "EMBEDDING_DIM = 50\n",
+    "\n",
+    "num_words = min(MAX_VOCAB_SIZE, len(word_to_index) + 1)\n",
+    "embedding_matrix = np.zeros((num_words, EMBEDDING_DIM))\n",
+    "\n",
+    "for word, i in word_to_index.items():\n",
+    "    if i < MAX_VOCAB_SIZE:\n",
+    "        embedding_vector = word2vec.get(word)\n",
+    "        if embedding_vector is not None:\n",
+    "            embedding_matrix[i] = embedding_vector"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96573fac",
+   "id": "32ec826d",
    "metadata": {},
    "outputs": [],
    "source": []
