add embedding layer and build encoder LSTM

--- a/poetry_generator.ipynb
+++ b/poetry_generator.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f499e9e0",
+   "id": "fac76f25",
    "metadata": {
     "scrolled": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "608719ae",
+   "id": "e15477c3",
    "metadata": {},
    "source": [
     "### Loading the data"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "ea2130f0",
+   "id": "b8363f26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c09340a7",
+   "id": "c5de231d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4151499f",
+   "id": "9408a419",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6c37a739",
+   "id": "6170acad",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d57095ac",
+   "id": "1d40b98d",
    "metadata": {},
    "source": [
     "### Converting sentences into integers and word to integer mapping\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c8c9c656",
+   "id": "d22deb8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "09a54ae7",
+   "id": "1089f43f",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "25e6a601",
+   "id": "b6ae861e",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f960c8c3",
+   "id": "5fa0fd14",
    "metadata": {},
    "source": [
     "#### word to integer mapping"
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e5bf4289",
+   "id": "86664895",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58baa26a",
+   "id": "61ae5da7",
    "metadata": {},
    "source": [
     "### Padding sequences --> by adding padding tokens, all sequences of varying lengths have same length so that they can be effectively processed by the model"
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "561f8667",
+   "id": "265edd99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d55e1897",
+   "id": "7574d336",
    "metadata": {
     "scrolled": true
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed332373",
+   "id": "06cea38f",
    "metadata": {},
    "source": [
     "### Load pre-trained word vectors with GloVe and word --> vec mapping"
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "86b0701a",
+   "id": "3e3adf4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "64fb7909",
+   "id": "24afcd04",
    "metadata": {
     "scrolled": true
    },
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c6fbf66b",
+   "id": "90e3574b",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b48646f6",
+   "id": "cb20bbbe",
    "metadata": {},
    "source": [
     "### Embedding matrix"
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "660c32cc",
+   "id": "5cbe7615",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "15539674",
+   "id": "05c6607f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "99accb73",
+   "id": "fd511afc",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0583efaf",
+   "id": "ada94359",
    "metadata": {},
    "source": [
     "### One-hot encoded target "
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27433772",
+   "id": "25b8828d",
    "metadata": {},
    "source": [
     "#### The target is a sequence, so can not pass a sparse categorical cross entropy loss function to keras as I have multiple targets per input"
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9bb132ba",
+   "id": "d8e06a26",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d6b5f702",
+   "id": "19d5c407",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,8 +514,10 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6c0aae2c",
-   "metadata": {},
+   "id": "c635b3a3",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2600,30 +2602,142 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9324d373",
+   "cell_type": "markdown",
+   "id": "2d7199e9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Load pre-trained word embeddings into an Embedding layer"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "890df842",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ff4d778",
+   "execution_count": 46,
+   "id": "cc0dea17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.zeros(())"
+    "embedding_layer = Embedding(num_words, \n",
+    "                            EMBEDDING_DIM, \n",
+    "                            weights=[embedding_matrix])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a24c0c8c",
+   "metadata": {},
+   "source": [
+    "### Create an LSTM network with a single LSTM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1830ca4",
+   "metadata": {},
+   "source": [
+    "#### Building a model..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "732c317a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.layers import Dense, Embedding, Input, LSTM\n",
+    "\n",
+    "LATENT_DIM = 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "75313882",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_ = Input(shape = (max_seq_len,))\n",
+    "input_h = Input(shape = (LATENT_DIM,))\n",
+    "input_c = Input(shape = (LATENT_DIM,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "70cc8a09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = embedding_layer(input_)\n",
+    "\n",
+    "# LSTM has to predict rest of the sequence and the output must be a sequence, hence return_sequences=True\n",
+    "lstm = LSTM(LATENT_DIM, return_sequences=True, return_state=True)\n",
+    "x, _, _ = lstm(x, initial_state=[input_h, input_c])\n",
+    "\n",
+    "dense = Dense(num_words, activation='softmax')\n",
+    "output = dense(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "0178679f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Model([input_, input_h, input_c], output)\n",
+    "model.compile(loss = 'categorical_crossentropy',\n",
+    "              optimizer = Adam(learning_rate=0.01),\n",
+    "              metrics = ['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "136ac670",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39587320",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c7b03fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9849e394",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97519e29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "118357f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
