--- a/poetry_generator.ipynb
+++ b/poetry_generator.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "6c510666",
+   "id": "177f0f2b",
    "metadata": {
     "scrolled": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41ab5cc1",
+   "id": "d36572a1",
    "metadata": {},
    "source": [
     "### Loading the data"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "2cc1a0cd",
+   "id": "85fc07b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "db42317b",
+   "id": "6e9bc8ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "14659202",
+   "id": "f3595675",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "35f1322e",
+   "id": "bb6228bc",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66d773aa",
+   "id": "19403c3d",
    "metadata": {},
    "source": [
     "### Converting sentences into integers and word to integer mapping\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3395414c",
+   "id": "204eb87b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5c1b8ac7",
+   "id": "d4e6a449",
    "metadata": {},
    "outputs": [
     {
@@ -178,6 +178,8 @@
    "source": [
     "tokenizer = Tokenizer(num_words=MAX_VOCAB_SIZE, filters='')\n",
     "tokenizer.fit_on_texts(all_lines)\n",
+    "\n",
+    "# converting words/texts in sentences into a sequence of integers\n",
     "input_sequences = tokenizer.texts_to_sequences(input_texts)\n",
     "target_sequences = tokenizer.texts_to_sequences(target_texts)\n",
     "\n",
@@ -187,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "32ee674d",
+   "id": "b9dee539",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16f27cbf",
+   "id": "85fd2966",
    "metadata": {},
    "source": [
     "#### word to integer mapping"
@@ -217,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "13b43c2c",
+   "id": "b9ef36de",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471f3fb7",
+   "id": "908f7dea",
    "metadata": {},
    "source": [
     "### Padding sequences --> by adding padding tokens, all sequences of varying lengths have same length so that they can be effectively processed by the model"
@@ -246,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "926250bf",
+   "id": "03554cf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "310672c5",
+   "id": "07974897",
    "metadata": {
     "scrolled": true
    },
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "651eb570",
+   "id": "dbc40ec3",
    "metadata": {},
    "source": [
     "### Load pre-trained word vectors with GloVe and word --> vec mapping"
@@ -288,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e86d889a",
+   "id": "9ad81089",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "845d22d5",
+   "id": "5c3ed264",
    "metadata": {
     "scrolled": true
    },
@@ -326,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "07d6c99b",
+   "id": "35b508f5",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd095f23",
+   "id": "902d0db7",
    "metadata": {},
    "source": [
     "### Embedding matrix"
@@ -384,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6a4423f5",
+   "id": "d3ee7f67",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1405badf",
+   "id": "57e443f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "50bb325c",
+   "id": "3333cebe",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "806e84ee",
+   "id": "a3725462",
    "metadata": {},
    "source": [
     "### One-hot encoded target "
@@ -469,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52fcbce8",
+   "id": "36e25be3",
    "metadata": {},
    "source": [
     "#### The target is a sequence, so can not pass a sparse categorical cross entropy loss function to keras as I have multiple targets per input"
@@ -478,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c628a14f",
+   "id": "60f96061",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1cbb64ec",
+   "id": "26ccfc2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "271d6cc7",
+   "id": "060c293a",
    "metadata": {
     "scrolled": true
    },
@@ -712,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e99f840e",
+   "id": "e92be746",
    "metadata": {},
    "source": [
     "### Load pre-trained word embeddings into an Embedding layer"
@@ -721,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "fde1c941",
+   "id": "a5c4ad59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00b9d826",
+   "id": "4d51f9af",
    "metadata": {},
    "source": [
     "### Create an LSTM network with a single LSTM"
@@ -740,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "573358d9",
+   "id": "c13e7ebb",
    "metadata": {},
    "source": [
     "#### Building a model..."
@@ -749,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "33286e81",
+   "id": "b86ddb3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "874afb8a",
+   "id": "b90a49c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "e198f820",
+   "id": "3af6957d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "d680c871",
+   "id": "ec884540",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "cc43ba0a",
+   "id": "4c8a9367",
    "metadata": {
     "scrolled": true
    },
@@ -5041,7 +5043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecc52648",
+   "id": "1aefe7bd",
    "metadata": {},
    "source": [
     "### Plotting \n",
@@ -5051,7 +5053,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "3920e877",
+   "id": "f2b25a39",
    "metadata": {},
    "outputs": [
     {
@@ -5075,7 +5077,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "c4755901",
+   "id": "5f49e38a",
    "metadata": {},
    "outputs": [
     {
@@ -5098,8 +5100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "52594ca5",
+   "execution_count": 77,
+   "id": "90e62cc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5109,7 +5111,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60847e46",
+   "id": "b8846e71",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6264ccc",
    "metadata": {},
    "outputs": [],
    "source": []
