--- a/poetry_generator.ipynb
+++ b/poetry_generator.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "177f0f2b",
+   "id": "dff833df",
    "metadata": {
     "scrolled": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d36572a1",
+   "id": "4f7117b3",
    "metadata": {},
    "source": [
     "### Loading the data"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "85fc07b6",
+   "id": "68bdbd79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6e9bc8ac",
+   "id": "7aa51812",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f3595675",
+   "id": "1b35a20a",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bb6228bc",
+   "id": "b48e75ae",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19403c3d",
+   "id": "e96dc4a4",
    "metadata": {},
    "source": [
     "### Converting sentences into integers and word to integer mapping\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "204eb87b",
+   "id": "5058bc7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d4e6a449",
+   "id": "3112769e",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b9dee539",
+   "id": "0c5d0490",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85fd2966",
+   "id": "19429235",
    "metadata": {},
    "source": [
     "#### word to integer mapping"
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b9ef36de",
+   "id": "d1a68c7c",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "908f7dea",
+   "id": "c76e4080",
    "metadata": {},
    "source": [
     "### Padding sequences --> by adding padding tokens, all sequences of varying lengths have same length so that they can be effectively processed by the model"
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "03554cf0",
+   "id": "b199d6c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "07974897",
+   "id": "1c167e17",
    "metadata": {
     "scrolled": true
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc40ec3",
+   "id": "eefd1032",
    "metadata": {},
    "source": [
     "### Load pre-trained word vectors with GloVe and word --> vec mapping"
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9ad81089",
+   "id": "7e029a2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5c3ed264",
+   "id": "a8004b90",
    "metadata": {
     "scrolled": true
    },
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "35b508f5",
+   "id": "5f0909ee",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "902d0db7",
+   "id": "257aa28d",
    "metadata": {},
    "source": [
     "### Embedding matrix"
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d3ee7f67",
+   "id": "ada2fa1e",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "57e443f3",
+   "id": "6abab0a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3333cebe",
+   "id": "047d18c7",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3725462",
+   "id": "352253b4",
    "metadata": {},
    "source": [
     "### One-hot encoded target "
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36e25be3",
+   "id": "345f9964",
    "metadata": {},
    "source": [
     "#### The target is a sequence, so can not pass a sparse categorical cross entropy loss function to keras as I have multiple targets per input"
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "60f96061",
+   "id": "95f43296",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "26ccfc2a",
+   "id": "2f17e37a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "060c293a",
+   "id": "5d299546",
    "metadata": {
     "scrolled": true
    },
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e92be746",
+   "id": "8b9c8817",
    "metadata": {},
    "source": [
     "### Load pre-trained word embeddings into an Embedding layer"
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a5c4ad59",
+   "id": "cc6b812e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d51f9af",
+   "id": "bc23d3ca",
+   "metadata": {},
+   "source": [
+    "### 1) Training the language model to predict the next word in the sentence by memorizing a bunch of sentences.."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d8bf5f0",
    "metadata": {},
    "source": [
     "### Create an LSTM network with a single LSTM"
@@ -742,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c13e7ebb",
+   "id": "ffaffc78",
    "metadata": {},
    "source": [
     "#### Building a model..."
@@ -751,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "b86ddb3f",
+   "id": "213b37b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "b90a49c6",
+   "id": "0488bd8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3af6957d",
+   "id": "e99f4311",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "ec884540",
+   "id": "794bdf05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "4c8a9367",
+   "id": "7c9550ee",
    "metadata": {
     "scrolled": true
    },
@@ -5043,7 +5051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aefe7bd",
+   "id": "a200cfa0",
    "metadata": {},
    "source": [
     "### Plotting \n",
@@ -5053,7 +5061,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "f2b25a39",
+   "id": "c5b22ab9",
    "metadata": {},
    "outputs": [
     {
@@ -5077,7 +5085,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "5f49e38a",
+   "id": "e66deea6",
    "metadata": {},
    "outputs": [
     {
@@ -5100,18 +5108,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "90e62cc3",
+   "execution_count": 78,
+   "id": "8a4a1dbb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### Trained a language model to predict the next word in a sentence by memorizing a bunch of sentences."
+    "### 1) Trained the language model to predict the next word in the sentence by memorizing a bunch of sentences.\n",
+    "### 2) Using this trained language model, I will be generating new sentences, poetry"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c028a3e",
+   "metadata": {},
+   "source": [
+    "### Decoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "915ed7fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input2 = Input(shape=(1,))\n",
+    "x = embedding_layer(input2)\n",
+    "\n",
+    "x, h, c = lstm(x, initial_state=[input_h, input_c])\n",
+    "\n",
+    "output2 = dense(x)\n",
+    "\n",
+    "sampling_model = Model([input2, input_h, input_c], [output2, h, c])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "00a30048",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.engine.functional.Functional at 0x131490550>"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sampling_model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8846e71",
+   "id": "528ecca3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5119,7 +5174,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6264ccc",
+   "id": "ace223f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fe537f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86b81331",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "308a2240",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81f3b7c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dccd275b",
    "metadata": {},
    "outputs": [],
    "source": []
