--- a/poetry_generator.ipynb
+++ b/poetry_generator.ipynb
@@ -55107,7 +55107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5899292c",
+   "id": "bffc5b0e",
    "metadata": {},
    "source": [
     "#### Generating 4 lines of poem"
@@ -55115,7 +55115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "2fe537f3",
    "metadata": {},
    "outputs": [
@@ -55177,7 +55177,33 @@
       "you don't give recognize seeking spilled feet them to plain speaking.\n",
       "1/1 [==============================] - 0s 19ms/step\n",
       "1/1 [==============================] - 0s 18ms/step\n",
-      "1/1 [==============================] - 0s 18ms/step\n"
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "1/1 [==============================] - 0s 48ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "1/1 [==============================] - 0s 22ms/step\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "bless you, it purport troubling groping where if.\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "1/1 [==============================] - 0s 26ms/step\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "1/1 [==============================] - 0s 19ms/step\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "the chisel work fill hudson's to pass a winter eve.\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "1/1 [==============================] - 0s 19ms/step\n",
+      "1/1 [==============================] - 0s 19ms/step\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
+      "1/1 [==============================] - 0s 19ms/step\n",
+      "he's celebrating something strange.\n",
+      "---Generate another line? [Y/n] ---n\n"
      ]
     }
    ],
